2005-10-17  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicComboBoxUI.java
	Filled empty blocks with comments.
	(FocusHandler.focusLost): Close popup when the combobox loses focus.
	* javax/swing/plaf/basic/BasicComboPopup.java
	Filled empty blocks with comments.
	(updateListBoxSelectionForEvent): Implemented partly.
	(ListMouseHandler.mouseReleased): Call updateListBoxSelectionForEvent.
	(ListMouseMotionHandler.mouseReleased): Likewise.

2005-10-17  David Gilbert  <david.gilbert@object-refinery.com>

	* examples/gnu/classpath/examples/swing/ComboBoxDemo.java:
	(CustomCellRenderer): new inner class,
	(comboState6): new field,
	(combo11): new field,
	(combo12): new field,
	(createContent): add panel from createPanel6(),
	(createPanel6): new method,
	(actionPerformed): update state for new JComboBoxes,
	* javax/swing/plaf/basic/BasicComboBoxUI.java
	(installComponents): don't create arrowButton until after listBox is 
	created, set listBox to the JList created by the popup,
	* javax/swing/plaf/metal/MetalComboBoxButton.java:
	(MetalComboBoxButton(JComboBox, Icon, boolean, CellRendererPane, 
	JList)): set margins to zero,
	(paintComponent): use list cell renderer to paint button content,
	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(initComponentDefaults): add 'List.font' default.

2005-10-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/util/Properties.java:
	(storeToXML(OutputStream,String)): Implemented.
	(storeToXml(OutputStream,String,String)): Likewise.

2005-10-17  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * gnu/CORBA/Focused_ORB.java: New file.
        * gnu/CORBA/Functional_ORB.java,
        org/omg/CORBA/ORB.java: Adapted to support the 
        gnu.CORBA.ListenerPort property.

2005-10-15  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/CORBA/DynamicImplementation.java: Made concrete.
        (invoke): Implemented.
        gnu/CORBA/Simple_delegate.java (request): Implemented. 
